# project-set-up

./: README.md
java-basic/: .gitignore  build.gradle
python-basic/: pyproject.toml  update_room.py
rust-basic/: Cargo.toml
rust-workspace/: Cargo.toml
rust-workspace-ffi/: .gitignore  Cargo.toml  Makefile.toml
rust-workspace-ffi/coin_flip/benches/: strong_scaling.rs  weak_scaling.rs
rust-workspace-ffi/coin_flip/src/: flip_task.rs
rust-workspace-ffi/coin_flip_cli/: Cargo.toml
rust-workspace-ffi/coin_flip_cli_py/: main.py  pyproject.toml  simulate.py
rust-workspace-ffi/coin_flip_py/: Cargo.toml
rust-workspace-ffi/coin_flip_py/src/: lib.rs
rust-workspace/room_renovation/: Cargo.toml
rust-workspace/room_renovation_cli/: Cargo.toml
