[project]
name = "python-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qwlist>=2.1.0",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "pyhamcrest>=2.1.0",
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
# Thank you... <https://github.com/astral-sh/uv/issues/7260#issuecomment-2341586054>
pythonpath = ["."]
